[package]
name = "be-rust-master"
version = "0.1.0"
edition = "2021"
authors = ["CryptoMasterTime <cryptomastertime@gmail.com>"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]
description = "A crate for demonstrating how to publish a Rust package."
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"